# codex-pet

./: .gitignore  Cargo.toml  LICENSE  NOTICE.md  README.md  package.json
.github/workflows/: macos-dmg.yml  windows-portable.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: bubble.css  bubble.html  electron-builder.yml  index.html  package-lock.json  package.json  pet-picker.css  pet-picker.html  settings.css  settings.html  styles.css  tsconfig.json
apps/desktop/src/: application-proxy.ts  assistant-config.ts  assistant-config_tests.ts  assistant-controller.ts  assistant-store.ts  bubble-preload.ts  bubble.ts  globals.d.ts  main.ts  openai-client.ts  openai-client_tests.ts  picker-preload.ts  picker.ts  preload.ts  proxy-config.ts  proxy-config_tests.ts  proxy-fetch.ts  proxy-fetch_tests.ts  renderer.ts  settings-preload.ts  settings.ts  shortcut-display.ts  shortcut-display_tests.ts  types.ts  window-behavior.ts  window-behavior_tests.ts
crates/pet-assets/: Cargo.toml
crates/pet-assets/src/: frames.rs  lib.rs  lib_tests.rs
crates/pet-core/: Cargo.toml
crates/pet-core/src/: behavior.rs  behavior_tests.rs  catalog.rs  config.rs  lib.rs  model.rs  model_tests.rs  notification.rs
crates/pet-runtime/: Cargo.toml
crates/pet-runtime/src/: main.rs  main_tests.rs  selection.rs
crates/pet-terminal/: Cargo.toml
crates/pet-terminal/src/: lib.rs  protocol.rs  protocol_tests.rs  sixel.rs
docs/: pet-upstream-parity.md
