[package]
name = "codex-pet"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-pet"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
pet-assets.workspace = true
pet-core.workspace = true
pet-terminal.workspace = true
serde_json.workspace = true

