[package]
name = "pet-assets"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
pet-core.workspace = true
reqwest.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true

