[package]
name = "pet-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-pet-runtime"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
pet-assets.workspace = true
pet-core.workspace = true
serde.workspace = true
serde_json.workspace = true

