[package]
name = "pet-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
image.workspace = true
pet-assets.workspace = true
pet-core.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

